Partial revert of Network List: Fix edge case

Bug was introduced here:
https://chromium-review.googlesource.com/920790

Change introducing the bug was not actually related to the fix
in that CL.

Bug: 817706
Change-Id: I9e73f05fe66745b1b7651333a6d715c682018a1a
Reviewed-on: https://chromium-review.googlesource.com/944161
Reviewed-by: Jenny Zhang <jennyz@chromium.org>
Commit-Queue: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540536}
Former-commit-id: bb670e0da6d028a0eec7b0a1b7b8e9c753cbfd53